fix: authentication - code review fixes
* 0.14 USD